[WFCORE-94] Enable -secmgr argument and SECMGR environment variable to turn on the security manager.